--- a/rock-paper-scissors-game/package.json
+++ b/rock-paper-scissors-game/package.json
@@ -1,15 +1,18 @@
 {
   "name": "rock-paper-scissors-game",
   "version": "1.0.0",
+  "description": "A simple auto-battle Rock Paper Scissors game",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "cd server && node server.js",
+    "client": "cd client && npm run dev",
+    "install-all": "npm install && cd server && npm install && cd ../client && npm install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
-    "concurrently": "^9.0.1"
+    "concurrently": "^6.2.0"
   }
 }
