--- a/rock-paper-scissors-game/package.json
+++ b/rock-paper-scissors-game/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && node server.js",
-    "client": "cd client && npm run dev",
+    "client": "cd client && npm run dev -- --host",
     "install-all": "npm install && cd server && npm install && cd ../client && npm install"
   },
   "keywords": [],
