--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,10 @@
       "@/types/*": ["types/*"]
     }
   },
+  "rules": {
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": "error"
+  },
   "files": [],
   "references": [
     {
